--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,16 @@
   align-items: center;
   justify-content: center;
   color: white;
-  background-image: linear-gradient(79deg, #7439db, #C66FBC 48%, #F7944D);
+  background: linear-gradient(
+    to right,
+    #19547b,
+    #ffd89b
+  ); 
 }
 
-.auth-form-container, .login-form, .register-form {
+.auth-form-container,
+.login-form,
+.register-form {
   display: flex;
   flex-direction: column;
 }
